added sections, added headings, added assistive capability to main picture and had to fix CSS to reflect this.

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <!-- SEMANTIC - this can be changed to section with it's class specified
     NOTE - the base image is not seated here and would not be read by the assisted reader.  The image for the hero section is 
     placed in CSS  We may have to move into the HTML to have the reader acknowledge it.-->
-    <div class="hero"></div>
+    <section class="hero"><img src="./assets/images/digital-marketing-meeting.jpg" height="500%" width="100%" alt="four individuals at a meeting with a laptop and glasses of water discussing something on paper"></section>
     <!--SEMANTIC - Change to section -->
-    <div class="content">
+    <section class="content">
         <!--SEMANTIC - Change to section -->
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <!--img requires alt-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -43,26 +43,26 @@
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
+        </section>
         <!--SEMANTIC - Change to section -->
-        <div id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="online-reputation-management">
             <!--img requires alt-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
+        </section>
         <!--SEMANTIC - Change to section -->
-        <div id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="social-media-marketing">
             <!--img requires alt-->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </section>
+    </section>
     <!--SEMANTIC - Change to section -->
     <div class="benefits">
         <!--SEMANTIC - Change to section -->
