--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon, your solution to your online presence</title> <!--This is a generic title no good COMPLETED-->
 </head>
 
 <body>
@@ -28,77 +28,77 @@
             </ul>
         </div>
     </header>
-    <!-- SEMANTIC - this can be changed to section with it's class specified
+    <!-- SEMANTIC - this can be changed to section with it's class specified COMPLETED
     NOTE - the base image is not seated here and would not be read by the assisted reader.  The image for the hero section is 
-    placed in CSS  We may have to move into the HTML to have the reader acknowledge it.-->
+    placed in CSS  We may have to move into the HTML to have the reader acknowledge it.COMPLETED-->
     <section class="hero"><img src="./assets/images/digital-marketing-meeting.jpg" height="500%" width="100%" alt="four individuals at a meeting with a laptop and glasses of water discussing something on paper"></section>
-    <!--SEMANTIC - Change to section -->
+    <!--SEMANTIC - Change to section COMPLETED-->
     <section class="content">
-        <!--SEMANTIC - Change to section -->
+        <!--SEMANTIC - Change to section COMPLETED-->
         <section id="search-engine-optimization" class="search-engine-optimization">
-            <!--img requires alt-->
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <!--img requires alt COMPLETED-->
+            <img src="./assets/images/search-engine-optimization.jpg" alt="picture of a notebook, laptop edge with a magnifying glass sitting on the edge. Pens and a holder with more pens. A white coffee cup with coffee in it on top of a saucer" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <!--does the <p> tag actually fall in the semantic requirements?-->
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <!--SEMANTIC - Change to section -->
+        <!--SEMANTIC - Change to section COMPLETED-->
         <section id="online-reputation-management" class="online-reputation-management">
-            <!--img requires alt-->
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <!--img requires alt COMPLETED-->
+            <img src="./assets/images/online-reputation-management.jpg" alt="A picture of a person sitting at a laptop with their phone in their left hand. the laptop screen shows graphs and the word Reputation. A black coffee cup sits to the right of the laptop." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <!--SEMANTIC - Change to section -->
+        <!--SEMANTIC - Change to section COMPLETED -->
         <section id="social-media-marketing" class="social-media-marketing">
-            <!--img requires alt-->
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <!--img requires alt  COMPLETED-->
+            <img src="./assets/images/social-media-marketing.jpg" alt="Image of 6 people sitting at a wood table brainstorming with a number of visual aids such as cards with icons that read about varied types of media." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
     </section>
-    <!--SEMANTIC - Change to section -->
-    <div class="benefits">
-        <!--SEMANTIC - Change to section -->
+    <!--SEMANTIC - Change to section COMPLETED -->
+    <section class="benefits">
+        <!--SEMANTIC - Change to section Unnecessary as it's handled in the main and is one section on the web page -->
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <!--img requires alt-->
-            <img src="./assets/images/lead-generation.png" />
+            <!--img requires alt COMPLETED-->
+            <img src="./assets/images/lead-generation.png" alt="an icon of a gear showing leading to dollars" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <!--SEMANTIC - Change to section -->
+        <!--SEMANTIC - Change to section COMPLETED -->
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <!--img requires alt-->
-            <img src="./assets/images/brand-awareness.png" />
+            <!--img requires alt COMPLETED-->
+            <img src="./assets/images/brand-awareness.png" alt="an icon of a person who is having an idea and being more visible" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <!--SEMANTIC - Change to section -->
+        <!--SEMANTIC - Change to section COMPLETED -->
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <!--img requires alt-->
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="an icon of a gear with dollar coins on the lower cogs." />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div><!--SEMANTIC - Change to footer -->
-    <div class="footer">
+    </section><!--SEMANTIC - Change to footer COMPLETED -->
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
